--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,16 @@ body {
 	margin: 0;
 	position:relative;
 }
+
+wrapper {
+      position: relative;
+      margin: 0 auto;
+      width: 90%;
+      max-width: 750px;
+  
+}
+
+
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -30,33 +40,37 @@ a img{
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+  margin: 20px;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 #maincontent {
   background-color: #f3f3f3;
-  min-height: 100%;
+  
+}
+#maincontent #map-container {
+  height: 400px;
+  width: 100%;
+  background-color: #ccc;
 }
 #footer {
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 25px 0px 25px 0px;
   text-align: center;
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
 nav {
-  width: 100%;
-  height: 80px;
+  padding: 20px;
   background-color: #252831;
   text-align:center;
 }
 nav h1 {
-  margin: auto;
+  margin: 0px;
 }
 nav h1 a {
   color: #fff;
@@ -71,7 +85,6 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
@@ -106,7 +119,6 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
   background-color: #3397DB;
   align-items: center;
 }
@@ -116,6 +128,7 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+  padding-top: 10px;
 }
 .filter-options select {
   background-color: white;
@@ -128,32 +141,39 @@ nav h1 a {
   padding: 0 10px;
   width: 200px;
 }
-
+#wrappermap {
+  display: flex;
+  flex-direction: column;
+}
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
-  background-color: #f3f3f3;
-  list-style: outside none none;
-  margin: 0;
-  padding: 30px 15px 60px;
-  text-align: center;
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
 }
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
+  text-align: center;
+  background: #fff;
+  width: 45%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  
+}
+ul {
+  margin: 0; /* To remove default bottom margin */ 
+  padding: 0; /* To remove default left padding */
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -180,22 +200,19 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  margin-bottom: 15px;
 }
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
-  position: fixed;
+  position: relative;
   top: 0;
   width: 100%;
   z-index: 1000;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  height: 400px;
 }
 .inside #map {
   background-color: #ccc;
@@ -204,8 +221,8 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
-  width: 50%;
+  position: relative;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
@@ -218,11 +235,11 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 100%;
 }
 #restaurant-address {
   font-size: 12pt;
-  margin: 10px 0px;
+  margin-left: 20px;
 }
 #restaurant-cuisine {
   background-color: #333;
@@ -231,45 +248,84 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
-  padding: 2px 0;
+  padding: 20px;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
+#reviews-container{
+  width: 100%;
+ }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 780px;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 0px;
 }
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
-  padding-bottom: 1pt;
+  padding-left: 20px;
 }
 #reviews-list {
-  margin: 0;
-  padding: 0;
+  width: 100%;
+  margin: 10px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 20px;
   position: relative;
-  width: 85%;
+  width: calc(50% - 50px);
+
 }
 #reviews-list li p {
   margin: 0 0 10px;
 }
-#restaurant-hours td {
+#restaurant-hours{
   color: #666;
+  margin-left: 20px
 }
+@media screen and (max-width: 600px) {
+  #restaurants-list li {
+    width: 100%;
+  }
+  #reviews-list li {
+    width: 100%;
+  }
+  #restaurant-container, #reviews-container {
+    width: 100%;
+  }
+
+  #maincontent #map-container {
+    width: 100%;
+  }
+}
+
+@media (min-width:601px)  { 
+  #wrappermap > #map-container, #wrappermap > #map-container > #map {
+    height: 780px;
+  }
+  #wrappermap {
+    flex-direction: row-reverse;
+  }
+  #restaurant-container {
+    width: 50%;
+  }
+
+ }
