--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #maincontent {
   background-color: #f3f3f3;
-  
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 #maincontent #map-container {
   height: 400px;
@@ -185,6 +187,16 @@ ul {
   margin: 20px 0 10px;
   text-transform: uppercase;
 }
+#restaurants-list li h2 {
+  color: #f18200;
+  font-family: Arial,sans-serif;
+  font-size: 14pt;
+  font-weight: 200;
+  letter-spacing: 0;
+  line-height: 1.3;
+  margin: 20px 0 10px;
+  text-transform: uppercase;
+}
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
@@ -267,7 +279,7 @@ ul {
 #reviews-container {
   padding: 0px;
 }
-#reviews-container h2 {
+#reviews-container h3 {
   color: #f58500;
   font-size: 24pt;
   font-weight: 300;
@@ -311,11 +323,7 @@ ul {
   #reviews-list li {
     width: 100%;
   }
-  #restaurant-container, #reviews-container {
-    width: 100%;
-  }
-
-  #maincontent #map-container {
+  #restaurant-container{
     width: 100%;
   }
 }
@@ -327,8 +335,4 @@ ul {
   #wrappermap {
     flex-direction: row-reverse;
   }
-  #restaurant-container {
-    width: 50%;
-  }
-
  }
